--- a/css/styles.css
+++ b/css/styles.css
@@ -7,7 +7,7 @@ body {
   zoom: 110%; }
 
 .site {
-  background-color: #f0f0f0 !important;
+  background-color: #ececec !important;
   display: flex;
   min-height: 100vh;
   flex-direction: column; }
@@ -20,7 +20,7 @@ body {
   padding: 0px; }
 
 .content {
-  background: #f4f4f4;
+  background: #f0f0f0;
   flex: 1;
   padding-bottom: 60px; }
 
@@ -64,7 +64,7 @@ a.btn:hover {
   margin-top: 25px;
   margin-bottom: 25px;
   border: 8px solid white;
-  background: #e8e8e8; }
+  background: #e4e4e4; }
 
 .flat {
   margin: 0px;
@@ -112,7 +112,7 @@ blockquote {
 hr {
   margin-top: 35px;
   margin-bottom: 20px;
-  border-top: 1px dotted #cdcdcd; }
+  border-top: 1px dotted #c9c9c9; }
 
 table {
   border-spacing: 10px;
@@ -128,7 +128,7 @@ td:first-child {
   padding-right: 15px; }
 
 tr {
-  border-bottom: 1px dotted #e8e8e8; }
+  border-bottom: 1px dotted #e4e4e4; }
 
 table tr:last-of-type {
   border-bottom: none; }
@@ -147,12 +147,12 @@ nav {
   padding: 0px !important; }
 
 #navbar-container {
-  background: #f8f8f8;
+  background: #f4f4f4;
   padding: 40px;
   padding-top: 20px;
   padding-bottom: 20px;
   margin-bottom: 0px;
-  border-bottom: 1px dotted #e6e6e6; }
+  border-bottom: 1px dotted #e2e2e2; }
 
 .navbar-logo-text {
   font-size: 38px;
@@ -170,17 +170,17 @@ nav a {
   color: #222222 !important; }
 
 .navbar-menu {
-  background: #f8f8f8;
+  background: #f4f4f4;
   padding-top: 20px;
   padding-left: 24px;
   padding-right: 24px;
   padding-bottom: 25px;
-  border-bottom: 1px dotted #e6e6e6; }
+  border-bottom: 1px dotted #e2e2e2; }
 
 .navbar-menu-mobile {
-  background: #f8f8f8;
+  background: #f4f4f4;
   display: none;
-  border-bottom: 1px dotted #e6e6e6; }
+  border-bottom: 1px dotted #e2e2e2; }
 
 .navbar-menu-mobile .col-6 {
   padding-left: 10px;
@@ -212,14 +212,14 @@ nav a {
     padding-top: 20px;
     padding-bottom: 20px; } }
 .breadcrumb {
-  background: #f8f8f8 !important;
+  background: #f4f4f4 !important;
   padding-top: 14px;
   padding-left: 45px;
   padding-right: 42px;
   font-size: 16px;
   padding-bottom: 10px;
   margin-bottom: 0px !important;
-  border-bottom: 1px dotted #e6e6e6;
+  border-bottom: 1px dotted #e2e2e2;
   border-radius: 0px !important; }
 
 .breadcrumb a {
@@ -250,7 +250,7 @@ nav a {
 .lang-link {
   padding-left: 8px;
   padding-right: 7px;
-  border-right: 1px dotted #e8e8e8;
+  border-right: 1px dotted #e4e4e4;
   line-height: 24px;
   font-size: 15px; }
 
@@ -271,7 +271,8 @@ nav a {
 .card {
   border: none;
   border-radius: 0px;
-  margin-bottom: 30px !important; }
+  margin-bottom: 30px !important;
+  border-bottom: 1px dotted #e2e2e2; }
 
 .card-header {
   padding: 30px;
@@ -631,14 +632,15 @@ img.travolta {
     padding-bottom: 0px; }
 
   .section .tags {
-    border-bottom: 1px dotted #cdcdcd;
+    border-bottom: 1px dotted #c9c9c9;
     margin-bottom: 20px; } }
 @media (max-width: 576px) {
   img.full {
     width: 100%; } }
 footer .first {
-  background: #eaeaea;
+  background: #e6e6e6;
   font-size: 90%;
+  border-top: 1px dotted #d0d0d0;
   padding-top: 35px;
   padding-bottom: 35px; }
 
@@ -650,7 +652,8 @@ footer .first {
   margin-right: 0px !important; }
 
 footer .second {
-  background: #e4e4e4;
+  background: #e0e0e0;
+  border-top: 1px dotted #d0d0d0;
   padding-top: 15px !important;
   padding-bottom: 12px !important;
   padding-left: 15px;
